--- a/login.html
+++ b/login.html
@@ -46,7 +46,7 @@
     
             if (username === 'admin' && password === 'admin') {
                 event.preventDefault();
-                window.location.href = 'Logado.html';
+                window.location.href = 'Menu.html';
             }
         });
     </script>
