--- a/hebreus - aula 3.html
+++ b/hebreus - aula 3.html
@@ -48,9 +48,10 @@
         .sidebar .closebtn {
             position: absolute;
             top: 0;
-            right: 25px;
+            right: 0px;
             font-size: 36px;
             margin-left: 50px;
+            padding: 6px;
         }
 
         .openbtn {
