--- a/Menu.html
+++ b/Menu.html
@@ -80,9 +80,9 @@
   <h3 class="texto123">VELHO TESTAMENTO</h3>
   <h3 class="texto123">1º Semestre</h3>
   <a href="hebreus.html">Hebreus</a>
-  <a href="#">Êxodo</a>
+  /*<a href="#">Êxodo</a>
   <a href="#">Levítico</a>
-  <a href="#">Deuteronômio</a>
+  <a href="#">Deuteronômio</a>*/
 </div>
 
 <div id="main">
