Alteração tamanho dos videos

--- a/hebreus - aula 3.html
+++ b/hebreus - aula 3.html
@@ -136,7 +136,8 @@
   <h1 class="title" class="title123">Aula 3</h1>
   <!-- Adicionado para incorporar o vídeo -->
   <div class="video-container">
-    <iframe src="https://drive.google.com/file/d/1iQgwlecLE6-jpgZbLu9JLaYCpzteBxc4/preview" width="640" height="480"></iframe>
+    <iframe src="https://drive.google.com/file/d/1iQgwlecLE6-jpgZbLu9JLaYCpzteBxc4/preview" width="100%" height="70%"></iframe>
+    
   </div>
 </div>
 
