--- a/hebreus - aula 4.html
+++ b/hebreus - aula 4.html
@@ -136,7 +136,7 @@
   <h1 class="title" class="title123">Aula 4</h1>
   <!-- Adicionado para incorporar o vídeo -->
   <div class="video-container">
-    <iframe src="https://drive.google.com/file/d/1WC7BUuE9dRl_aTFg_IK4sz0_HIizzEp8/preview" width="640" height="480"></iframe>
+    <iframe src="https://drive.google.com/file/d/1WC7BUuE9dRl_aTFg_IK4sz0_HIizzEp8/preview" width="100%" height="70%"></iframe>
 </div>
 
 <script>
