--- a/hebreus - aula 5.html
+++ b/hebreus - aula 5.html
@@ -136,7 +136,7 @@
   <h1 class="title" class="title123">Aula 5</h1>
   <!-- Adicionado para incorporar o vídeo -->
   <div class="video-container">
-    <iframe src="https://drive.google.com/file/d/1_z81bz_3xUPjnxmfNzM8y6DRwFhKzx55/preview" width="640" height="480"></iframe>
+    <iframe src="https://drive.google.com/file/d/1_z81bz_3xUPjnxmfNzM8y6DRwFhKzx55/preview" width="100%" height="70%"></iframe>
   </div>
 </div>
 
