--- a/hebreus - aula 6.html
+++ b/hebreus - aula 6.html
@@ -136,7 +136,7 @@
   <h1 class="title" class="title123">Aula 6</h1>
   <!-- Adicionado para incorporar o vídeo -->
   <div class="video-container">
-    <iframe src="https://drive.google.com/file/d/13_1PQuztCZo9Rj0yOUFGsO18SuBDTpjt/preview" width="640" height="480"></iframe> </div>
+    <iframe src="https://drive.google.com/file/d/13_1PQuztCZo9Rj0yOUFGsO18SuBDTpjt/preview" width="100%" height="70%"></iframe>
   </div>
 </div>
 
