--- a/hebreus - aula 7.html
+++ b/hebreus - aula 7.html
@@ -136,7 +136,7 @@
   <h1 class="title" class="title123">Aula 7</h1>
   <!-- Adicionado para incorporar o vídeo -->
   <div class="video-container">
-    <iframe src="https://drive.google.com/file/d/1PS3GKuZDWdj9fLoVS3dZ9P523Skuxuvq/preview" width="640" height="480"></iframe>
+    <iframe src="https://drive.google.com/file/d/1PS3GKuZDWdj9fLoVS3dZ9P523Skuxuvq/preview" width="100%" height="70%"></iframe>
   </div>
 </div>
 
