--- a/hebreus - aula 8.html
+++ b/hebreus - aula 8.html
@@ -136,7 +136,7 @@
   <h1 class="title" class="title123">Aula 8</h1>
   <!-- Adicionado para incorporar o vídeo -->
   <div class="video-container">
-    <iframe src="https://drive.google.com/file/d/1Nl4toJ1tr4YnAxF4mAlE85Pfkdpvk3tN/preview" width="640" height="480"></iframe>
+    <iframe src="https://drive.google.com/file/d/1Nl4toJ1tr4YnAxF4mAlE85Pfkdpvk3tN/preview" width="100%" height="70%"></iframe>
   </div>
 </div>
 
