--- a/hebreus - aula 1.html
+++ b/hebreus - aula 1.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="style.css">
     <title>IBF</title>
     <style>
+        footer {
+                margin-top: auto;
+                text-align: center;
+                padding: 20px;
+                color: white;
+                background-color: #007BFF;
+                }
         body {
             font-family: "Lato", sans-serif;
         }
@@ -139,6 +146,10 @@
     <iframe src="https://drive.google.com/file/d/1vGJkiIhWYjY6k4En9X8aTD4s4V4F9nkf/preview" width="100%" height="70%"></iframe>
   </div>
 </div>
+
+<footer>
+    <p>© 2024 Instituto Biblico Fé</p>
+</footer>
 
 <script>
     function openNav() {
