--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
     <nav>
         <a href="index.html">Início</a> |
         <a href="#cursos">Cursos</a> |
-        <a href="#contato">Contato</a> |
+        <a href="contato.html">Contato</a> |
         <a href="#cursos">Nossos Cursos</a> |
         <a href="#historia">Nossa História</a> |
         <a href="login.html">Login</a>
