--- a/contato.html
+++ b/contato.html
@@ -40,7 +40,7 @@
                 <label for="assunto">Assunto:</label><br>
                 <input type="text" id="assunto" name="assunto"><br>
                 <label for="mensagem">Mensagem:</label><br>
-                <textarea id="mensagem" name="mensagem" rows="4" cols="50"></textarea><br>
+                <textarea id="mensagem" name="mensagem" rows="4" cols="50" placeholder="Digite aqui seu texto a ser enviado"></textarea><br>
                 <input type="submit" value="Enviar">
             </form>
         </section>
