--- a/contato.html
+++ b/contato.html
@@ -34,11 +34,11 @@
             <!-- Você também pode adicionar um formulário para que os visitantes possam enviar mensagens para a empresa. -->
             <form id="contatoForm" action="/contato" method="post">
                 <label for="nome">Nome:</label><br>
-                <input type="text" id="nome" name="nome" aria-placeholder="Seu Nome Aqui"><br>
+                <input type="text" id="nome" name="nome" placeholder="Seu Nome Aqui"><br>
                 <label for="email">Email:</label><br>
-                <input type="email" id="email" name="email" aria-placeholder="Seu E-mail Aqui"><br>
+                <input type="email" id="email" name="email" placeholder="Seu E-mail Aqui"><br>
                 <label for="assunto">Assunto:</label><br>
-                <input type="text" id="assunto" name="assunto"  aria-placeholder="Elogio / Reclamação / Duvida"><br>
+                <input type="text" id="assunto" name="assunto" placeholder="Elogio / Reclamação / Duvida"><br>
                 <label for="mensagem">Mensagem:</label><br>
                 <textarea id="mensagem" name="mensagem" rows="4" cols="50" placeholder="Digite aqui seu texto a ser enviado"></textarea><br>
                 <input type="submit" value="Enviar">
