--- a/login.html
+++ b/login.html
@@ -24,7 +24,7 @@
 
     <main>
         <section id="login">
-            <h2>Login</h2>
+            <h2 class="h2login">Login</h2>
             <form id="loginForm" action="/login" method="post">
                 <label for="username">Usuário:</label><br>
                 <input type="text" id="username" name="username"><br>
