--- a/contato.html
+++ b/contato.html
@@ -27,7 +27,7 @@
             <h2>Contato</h2>
             <!-- Aqui você pode adicionar os dados de contato da empresa, como endereço, telefone, email, redes sociais, etc. -->
             <p>Endereço: Rua Humberto Mattarazzo, 2345 </p>
-            <p>Distrito Industrial, Santa Bárbara d'Oeste, SP</p>
+            <p>Distrito Industrial, Santa Bárbara d'Oeste/SP</p>
             <p>Telefone / WhatsApp: (19) 99168-6675</p>
             <p>Facebook: facebook.com/</p>
             <p>Instagram: instagram.com/</p>
